<resources>
    <string name="app_name">Student Union</string>
    <string name="sign_in_with_bits_email">Sign in with your BITS email address</string>
    <string name="sign_in_failed">Sign in failed. Please try again.</string>
    <string name="sign_in_use_bits_mail">Use your BITS email address to log in.</string>
    <string name="my_laundry">My laundry</string>
    <string name="professor_availability">Professor availability</string>
    <string name="update_availability">Update availability</string>
    <string name="action_settings">Settings</string>
    <string name="signout">Sign out</string>
    <string name="my_profile">My profile</string>
    <string name="no_laundry">You have no laundry orders</string>
    <string name="no_cab_share_requests">You have no cab sharing requests</string>
    <string name="in_room">In room</string>
    <string name="not_in_room">Not in room</string>
    <string name="airport_cab_sharing">Airport cab sharing</string>
    <string name="availability_marked_available">You\'ve been marked as available</string>
    <string name="availability_marked_unavailable">You\'ve been marked as unavailable</string>

    <string name="add_cab_sharing_request">Add airport cab sharing request</string>
    <string name="campus_to_airport">Campus to Airport</string>
    <string name="airport_to_campus">Airport to campus</string>
    <string name="your_requests">Your requests</string>
    <string name="matches">Matches:</string>
    <string name="enter_date">Date of flight departure/arrival</string>
    <string name="enter_time">Time of flight departure/arrival</string>
    <string name="ddmmyy">dd/mm/yy</string>
    <string name="hhmm">hh:mm</string>
    <string name="hrs">hrs</string>
    <string name="mins">mins</string>
    <string name="colon">:</string>
    <string name="am">AM</string>
    <string name="pm">PM</string>
    <string name="add_request">Add request</string>
    <string name="wait_time">Time you\'re willing to wait</string>

    <string name="no_matches">No matches found</string>
    <string name="one_match_found">One match found</string>
    <string name="matches_found"> matches found</string>

    <string name="plus">+</string>
    <string name="minus">-</string>

    <string name="flight_leaves_on">Flight leaves on</string>
    <string name="flight_arrives_on">Flight arrives on</string>
    <string name="at">at</string>
    <string name="will_leave">Willing to leave</string>
    <string name="early">early</string>
    <string name="late">late</string>

    <string name="edit_cab_sharing_request">Edit airport cab sharing request</string>
    <string name="edit_request">Edit request</string>
    <string name="delete_request">Delete cab sharing request</string>
    <string name="delete_request_msg">Are you sure you want to delete your cab sharing request?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="deleted_request">Successfully deleted your cab sharing request</string>
    <string name="delete_error">There was an error deleting your cab sharing request</string>

    <!--START: Firebase database fields-->
    <string name="firebase_database_laundry_collection">LaundryOrders</string>
    <string name="firebase_database_laundry_given_date_field">givenDate</string>
    <string name="firebase_database_laundry_room_no_field">roomNo</string>
    <string name="firebase_database_laundry_price_field">price</string>
    <string name="firebase_database_laundry_complete_field">complete</string>

    <string name="firebase_database_professor_collection">Professors</string>
    <string name="firebase_database_professor_email_key">name</string>
    <string name="firebase_database_professor_name_key">name</string>
    <string name="firebase_database_professor_dept_key">department</string>
    <string name="firebase_database_professor_roomNo_key">roomNo</string>
    <string name="firebase_database_professor_available_key">complete</string>

    <string name="firebase_database_cab_sharing_collection">CabShareRequests</string>
    <string name="firebase_database_cab_type_field">cabType</string>
    <string name="firebase_database_flight_date_field">flightDateAndTime</string>
    <string name="firebase_database_requester_phone_field">requesterPhone</string>
    <string name="firebase_database_wait_time_field">waitTime</string>

    <string name="firebase_database_students_collection">Students</string>
    <string name="firebase_database_student_email_field">email</string>
    <string name="firebase_database_student_name_field">name</string>
    <string name="firebase_database_student_room_no_field">roomNo</string>
    <string name="firebase_database_student_phone_no_field">phoneNo</string>
    <!--END: Firebase database values-->

    <!--START: Shared pref values-->
    <string name="shared_pref_key">com.example.su.PREFERENCE_FILE_KEY</string>
    <string name="student_or_prof_key">student_or_prof</string>
    <string name="signed_in_before_key">signedInBefore</string>
    <string name="student_value">student</string>
    <string name="prof_value">prof</string>
    <!--END: Shared pref values-->

    <!--START: Introduction page values-->
    <string name="header_hey_there">Hey there!</string>
    <string name="content_intro">Welcome to BITS Pilani, Hyderabad Campus’ Student Union app. With this app, we aim to solve all of the problems faced by students on campus. With this initial release, we’re offering three features:</string>
    <string name="header_my_laundry">My laundry</string>
    <string name="content_my_laundry">Has the laundry place at CP ever told you to come collect your laundry after two days, but when you go to collect it, it’s not ready? Then you come the next day and it’s still not ready? Now, we’ll notify you when your laundry is ready for collection so that you don’t have to waste time going everyday and checking whether it’s ready.</string>
    <string name="header_professor_availability">Professor availability</string>
    <string name="content_professor_availability">Have you ever walked all the way to the I Block just to talk to a professor but then find out that he’s not in his room? Now, you can see every professor’s room number and whether they’re in their room or not. </string>
    <string name="header_airport_cab_sharing">Airport cab sharing</string>
    <string name="content_airport_cab_sharing">Have you ever scrolled through the long list of cab sharing requests on travel@bphc trying to find yourself a match? Now, all you need to do is enter your flight details and how much time you’re willing to wait and we’ll automatically find you matches!</string>
    <string name="content_ending">Those are only the features we’re starting with. We have a lot more planned. If you have any ideas, feel free to write about them to suttbphc@gmail.com.</string>
    <string name="content_credits">Made with love by Vineeth Kumar, Aryan Arora, and Mihir Bansal.</string>
    <string name="next">NEXT</string>
    <string name="header_to_start">To start,</string>
    <string name="content_to_start">We need your room and phone number:</string>
    <string name="room_no">Room number</string>
    <string name="side">Side</string>
    <string name="phone_no">Phone number</string>
    <string name="room_no_warning">Your room number will only be used to identify which laundry order is yours.</string>
    <string name="phone_no_warning">Your phone number, along with your name, will be shared with other users when you use the cab sharing feature.\n\nBy continuing, you acknowledge sharing this information and that it is correct.</string>
    <string name="submit">Continue</string>
    <!--END: Introduction page values-->

    <!--START: Hostel values-->
    <string name="select_hostel">Hostel</string>
    <string name="hostel_vm">VM</string>
    <string name="hostel_vk">VK</string>
    <string name="hostel_budh">B</string>
    <string name="hostel_ram">R</string>
    <string name="hostel_krishna">K</string>
    <string name="hostel_gandhi">G</string>
    <string name="hostel_gautam">GA</string>
    <string name="hostel_shankar">S</string>
    <string name="hostel_meera">M</string>
    <string name="hostel_malviya">MA</string>
    <string name="to_continue">To continue,</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--END: Shared pref values-->

</resources>
